--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Learn German A1 vocabulary with structured daily exercises using official Goethe-Institut wordlist" />
     <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="German Coach" />
-    <meta name="application-name" content="German Coach" />
+    <meta name="apple-mobile-web-app-title" content="German A1 Coach" />
+    <meta name="application-name" content="German A1 Coach" />
     <meta name="msapplication-TileColor" content="#3b82f6" />
     <meta name="msapplication-config" content="/icons/browserconfig.xml" />
     <title>A1 German Coach - Vocabulary Training</title>
